# fastimagehash

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  fastimagehash.cpp  fastimagehash.h  imhash.c
bench/: 1000px  100px  2000px  200px  3000px  300px  4000px  500px  8000px  README.md  benchmark.py  run.py
bench/results/: bench.csv  bench2.csv  bench3.csv
cmake/: FindFFTW.cmake
